[package]
name = "indexify-server"
version = "0.3.12"
edition = "2024"
authors = ["Tensorlake Inc. <support@tensorlake.ai>"]
license = "Apache-2.0"
build = "build.rs"
resolver = "2"

[features]
default = []
migrations = []
console-subscriber = ["dep:console-subscriber"]

[dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["multipart", "macros", "tokio"] }
axum-server = "0.7.2"
axum-tracing-opentelemetry = { version = "0.32.1", features = ["tracing_level_info"] }
base64 = "0.22.1"
bytes = { version = "1.10.1", features = ["serde"] }
chrono = "0.4.42"
ciborium = "0.2.2"
clap = { version = "4.5.50", features = ["derive"] }
console-subscriber = { version = "0.5.0", optional = true }
derive_builder = "0.20.2"
figment = { version = "0.10.19", features = ["yaml"] }
foundationdb = { version = "0.10.0", features = ["embedded-fdb-include", "fdb-7_4", "num-bigint", "serde", "serde_bytes", "serde_json"] }
futures = "0.3.31"
hyper = "1.7.0"
im = { version = "15.1.0" }
json-subscriber = "0.2.6"
nanoid = "0.4.0"
object_store = { version = "0.12.4", features = ["aws"] }
omniqueue = { git = "https://github.com/tensorlakeai/omniqueue-rs", branch = "main", features = ["sqs"], default-features = false }
opentelemetry = { version = "0.31.0", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.31.0", features = ["tokio", "metrics", "trace", "grpc-tonic", "zstd-tonic"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "metrics", "trace"] }
opentelemetry-stdout = { version = "0.31.0", default-features = false, features = ["trace"] }
pin-project = "1.1.10"
pin-project-lite = "0.2.16"
priority-queue = "2.6.0"
prost = "0.14.1"
prost-types = "0.14.1"
rand = "0.9.2"
rocksdb = { version = "0.24.0" }
rust-embed = { version = "8.8.0", features = ["mime-guess"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
slatedb = { version = "0.8.2" }
strum = { version = "0.27.2", features = ["derive"] }
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-reflection = "0.14.2"
tower-http = { version = "0.6.6", default-features = false, features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
url = "2.5.6"
utoipa = { version = "5.4.0", features = ["axum_extras", "yaml"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.18.1", features = ["v4"] }


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
mock_instant = "0.6.0"
rocksdb = { version = "0.24.0" }
strum = { version = "0.27.1", features = ["derive"] }
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["full", "test-util"] }

[build-dependencies]
anyhow = "1.0.98"
tonic-prost-build = "0.14.2"
# All features enabled
vergen = { version = "9.0.6", features = ["build", "cargo", "rustc", "si"] }

[package.metadata.deb]
maintainer = "Diptanu Gon Choudhury <diptanu@tensorlake.ai>"
copyright = "2024, Diptanu Gon Choudhury <diptanu@tensorlake.ai>"
license-file = ["../LICENSE", "4"]
extended-description = """\
Indexify is a reactive structured extraction engine for un-structured data.
"""
section = "utility"
priority = "optional"
depends = "$auto"
