[tool.poetry]
name = "indexify-py"
version = "0.0.1"
description = "Python sources for indexify"
authors = ["diptanu <diptanuc@gmail.com>"]
readme = "README.md"
packages = [{include = "indexify_py"}]

[tool.poetry.dependencies]
python = "^3.10"
urllib3 = {version = "1.26.15", source = "PyPI"}
transformers = {extras = ["torch"], version = "^4.29.2", source="PyPI"}
optimum = {extras = ["onnxruntime"], version = "^1.8.6", source="PyPI"}
torch = {version = "^2.0.1+cpu", source = "pytorch-cpu"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "secondary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

