[tool.poetry]
name = "indexify-py"
version = "0.0.1"
description = "Python sources for indexify"
authors = ["diptanu <diptanuc@gmail.com>"]
readme = "README.md"
packages = [{include = "indexify_py"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"