[package]
name = "indexify-blob-store"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
tokio-stream.workspace = true
anyhow.workspace = true
bytes.workspace = true
tracing.workspace = true
sha2.workspace = true
url.workspace = true
futures.workspace = true
aws-sdk-s3.workspace = true
aws-config.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
