[package]
name = "blob_store"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
object_store.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
url.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

# Optional cloud SDK dependencies for presigning
aws-sdk-s3 = { version = "1.78", optional = true }
aws-config = { version = "1.5", optional = true }
google-cloud-storage = { version = "0.22", optional = true }
azure_storage = { version = "0.20", optional = true }
azure_storage_blobs = { version = "0.20", optional = true }

# Metrics (always enabled per user request)
opentelemetry.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[features]
default = ["aws"]
aws = ["dep:aws-sdk-s3", "dep:aws-config"]
gcp = ["dep:google-cloud-storage"]
azure = ["dep:azure_storage", "dep:azure_storage_blobs"]
