[package]
name = "indexify-dataplane"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-inline-default.workspace = true
serde-saphyr.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-stdout.workspace = true
json-subscriber.workspace = true
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
uuid.workspace = true
proto-api.workspace = true
prost.workspace = true
sha2.workspace = true
tower.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
axum.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
hostname.workspace = true
bytes.workspace = true
sysinfo.workspace = true
bollard = { workspace = true }
futures-util = { workspace = true }
lazy_static = { workspace = true }
rcgen.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
