[package]
name = "indexify_internal_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = { workspace = true }
nanoid = { workspace = true }
indexify_proto = { workspace = true }
mime = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
smart-default = { workspace = true }
strum = { workspace = true }
utoipa = { workspace = true }
json-schema-tools = {workspace = true} 