[package]
name = "indexify_proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib"]

[dependencies]
prost = { workspace = true }
prost-wkt = {workspace = true }
prost-wkt-types = {workspace=true}
serde = { workspace = true }
tonic = { workspace = true }
