[package]
name = "otlp-logs-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["now"] }
http = "1.4.0"
opentelemetry-proto = { version = "0.31.0", default-features = false, features = ["logs", "with-serde", "gen-tonic"] }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = ["logs"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", default-features = false, features = ["time"] }
tonic = { version = "0.14.2", features = ["zstd", "tls-aws-lc"] }
tonic-types = "0.14.2"
tracing = "0.1.44"
