[package]
name = "proto-api"
version = "0.1.0"
edition = "2024"
authors = ["Tensorlake Inc. <support@tensorlake.ai>"]
license = "Apache-2.0"
build = "build.rs"

[dependencies]
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
tonic-prost-build = { workspace = true }
