[package]
name = "proto-api"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
anyhow.workspace = true
tonic-prost-build.workspace = true
