[package]
name = "indexify-server"
version = "0.3.15"
edition = "2024"
authors = ["Tensorlake Inc. <support@tensorlake.ai>"]
license = "Apache-2.0"
build = "build.rs"
resolver = "2"

# [lib]
# name = "indexify_server"
# path = "src/lib.rs"

[features]
default = []
migrations = []
console-subscriber = ["dep:console-subscriber"]

[dependencies]
async-stream = { workspace = true }
serde = { workspace = true }
serde-inline-default = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
axum-server = { workspace = true }
futures = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
sha2 = { workspace = true }
nanoid = { workspace = true }
object_store = { workspace = true }
uuid = { workspace = true }
tower-http = { workspace = true }
bytes = { workspace = true }
ciborium = { workspace = true }
rand = { workspace = true }
hyper = { workspace = true }
url = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-proto = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
axum-tracing-opentelemetry = { workspace = true }
base64 = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
proto-api = { path = "../proto-api" }
tokio-stream = { workspace = true }
priority-queue = { workspace = true }
rust-embed = { workspace = true }
pin-project = { workspace = true }
async-trait = { workspace = true }
rocksdb = { workspace = true }
strum = { workspace = true }
derive_builder = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
json-subscriber = { workspace = true }
omniqueue = { workspace = true }
chrono = { workspace = true }
prost-types = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-stdout = { workspace = true }
console-subscriber = { workspace = true, optional = true }
tonic-types = { workspace = true }
tokio-util = { workspace = true }
imbl = { workspace = true }


[dev-dependencies]
tempfile = { workspace = true }
strum = { workspace = true }
rocksdb = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
mock_instant = { workspace = true }
criterion = { workspace = true }

# [[bench]]
# name = "state_store"
# harness = false

[build-dependencies]
anyhow = { workspace = true }
# All features enabled
vergen = { workspace = true }

[package.metadata.deb]
maintainer = "Diptanu Gon Choudhury <diptanu@tensorlake.ai>"
copyright = "2024, Diptanu Gon Choudhury <diptanu@tensorlake.ai>"
license-file = ["../LICENSE", "4"]
extended-description = """\
Indexify is a reactive structured extraction engine for un-structured data.
"""
section = "utility"
priority = "optional"
depends = "$auto"
