[package]
name = "indexify-server"
version = "0.3.15"
edition.workspace = true
authors.workspace = true
license.workspace = true
build = "build.rs"
resolver = "2"

[features]
default = ["migrations"]
migrations = []
console-subscriber = ["dep:console-subscriber"]

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
async-broadcast.workspace = true
async-stream.workspace = true
async-trait.workspace = true
futures.workspace = true
pin-project.workspace = true
serde.workspace = true
serde-inline-default.workspace = true
serde_json.workspace = true
serde-saphyr.workspace = true
postcard.workspace = true
axum.workspace = true
axum-server.workspace = true
tower-http.workspace = true
hyper.workspace = true
tonic.workspace = true
tonic-reflection.workspace = true
tonic-types.workspace = true
prost-types.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry-proto.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-stdout.workspace = true
axum-tracing-opentelemetry.workspace = true
json-subscriber.workspace = true
console-subscriber = { workspace = true, optional = true }
otlp-logs-exporter.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
indexify-blob-store.workspace = true
rocksdb.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
sha2.workspace = true
base64.workspace = true
nanoid.workspace = true
uuid.workspace = true
bytes.workspace = true
priority-queue.workspace = true
imbl.workspace = true
rand.workspace = true
rayon.workspace = true
url.workspace = true
chrono.workspace = true
strum.workspace = true
derive_builder.workspace = true
rust-embed.workspace = true
omniqueue.workspace = true
proto-api.workspace = true
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true
strum.workspace = true
rocksdb.workspace = true
tokio = { workspace = true, features = ["test-util"] }
mock_instant.workspace = true
criterion.workspace = true

[build-dependencies]
anyhow.workspace = true
vergen.workspace = true

[package.metadata.deb]
maintainer = "Diptanu Gon Choudhury <diptanu@tensorlake.ai>"
copyright = "2024, Diptanu Gon Choudhury <diptanu@tensorlake.ai>"
license-file = ["../LICENSE", "4"]
extended-description = """\
Indexify is a reactive structured extraction engine for un-structured data.
"""
section = "utility"
priority = "optional"
depends = "$auto"
