[tool.poetry]
name = "tests"
version = "0.1.0"
description = "Integration tests for Function Executor"
authors = ["Tensorlake Inc. <support@tensorlake.ai>"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/tensorlakeai/indexify"
repository = "https://github.com/tensorlakeai/indexify"

[tool.poetry.dependencies]
python = "^3.9"
indexify-function-executor = { path = "..", develop = true }
tensorlake = "^0.1.1"

[build-system]
requires = ["poetry==2.0.0"]
build-backend = "poetry.core.masonry.api"
